# NanoAccel

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  TODO.md  optimization_guide.md  pyproject.toml  requirements.txt
examples/: basic_usage.py  nanoaccel.yaml  speculative_decoding.py
nanoaccel/: __init__.py  cli.py  config.py  core.py  kv_cache_manager.py  quantization.py  speculative.py  utils.py
src/: nanoaccel.py
tests/: __init__.py  test_quantization.py  test_utils.py
